Changed contact action
contact action email

--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 				</div>
 				<div class="col-md-6 animate-box">
 					<h3>Get In Touch With Me</h3>
-					<form action="https://formspree.io/naveenreddy.parne@gmail.com" method="POST">
+					<form action="https://formspree.io/gautam.koppisetti@gmail.com" method="POST">
 						<div class="row form-group">
 							<div class="col-md-6">
 								<!-- <label for="fname">First Name</label> -->
@@ -151,7 +151,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<!-- <label for="email">Email</label> -->
-								<input type="text" id="email" class="form-control" name="email" placeholder="Your email address">
+								<input type="text" id="email" class="form-control" name="email" placeholder="Your email address" required="">
 							</div>
 						</div>
 
