--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Stamina &mdash; </title>
+	<title>Gautam &mdash; Fitness trainer in hyderabad</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -24,15 +24,15 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="fitness trainer in hyderabad"/>
+	<meta property="og:image" content="gym trainer"/>
+	<meta property="og:url" content="online trainer"/>
+	<meta property="og:site_name" content="gautam Koppisetti"/>
+	<meta property="og:description" content="fitness model in hyderabad"/>
+	<meta name="twitter:title" content="six pack trainer in hyderabad" />
+	<meta name="twitter:image" content="trainer in hyderabad" />
+	<meta name="twitter:url" content="fitness" />
+	<meta name="twitter:card" content="gautam" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
 	
@@ -71,11 +71,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="num">Call: +91 8790 201 998</p>
+						<p class="num">Call: +91 87902 01998</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">Stamina<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">Gautam<span>.</span></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
@@ -115,8 +115,6 @@
 			</div>
 		</div>
 	</header>
-	<div id="map" class="fh5co-map"></div>
-		<!-- END map -->
 	
 	<div id="fh5co-contact">
 		<div class="container">
@@ -126,7 +124,7 @@
 					<div class="fh5co-contact-info">
 						<h3>Contact Information</h3>
 						<ul>
-							<li class="address">Kris Gethin Gyms <br> Banjara hills, Hyderabad</li>
+							<li class="address">Banjara hills <br> Hyderabad, India</li>
 							<li class="phone"><a href="tel://1234567920">+91 87902 01998</a></li>
 							<li class="email"><a href="mailto:gautam.koppisetti@gmail.com">gautam.koppisetti@gmail.com</a></li>
 							<li class="url"><a href="http://gautamkoppisetti.com">gautamkoppisetti.com</a></li>
@@ -198,9 +196,9 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
