--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 					<div class="col-xs-12 text-right">
 						<p class="num">Call: +91 8790 201 998</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -318,9 +318,9 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
