--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Stamina &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Gautam &mdash; Fitness trainer in hyderabad</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -24,15 +24,15 @@
 	 -->
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="fitness trainer in hyderabad"/>
+	<meta property="og:image" content="gym trainer"/>
+	<meta property="og:url" content="online trainer"/>
+	<meta property="og:site_name" content="gautam Koppisetti"/>
+	<meta property="og:description" content="fitness model in hyderabad"/>
+	<meta name="twitter:title" content="six pack trainer in hyderabad" />
+	<meta name="twitter:image" content="trainer in hyderabad" />
+	<meta name="twitter:url" content="fitness" />
+	<meta name="twitter:card" content="gautam" />
 
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
 	
@@ -55,6 +55,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+	
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -73,9 +74,9 @@
 					<div class="col-xs-12 text-right">
 						<p class="num">Call: +91 8790 201 998</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -187,9 +188,9 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-youtube"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/gautam.koppisetty"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCM9qMGlIvhbUKFoP6wi55nw"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://www.instagram.com/gautamm_koppisetti/"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
